--- a/localisation/reimu_traits_l_english.yml
+++ b/localisation/reimu_traits_l_english.yml
@@ -1,2 +1,4 @@
 ﻿l_english:
  embodiment_communism:0 "The Embodiment of Communism"
+ trotskyite_plot:0 "Moriya Shrine Conspiracy?"
+ trotskyite_plot_desc:0 "It's time to beat up some goddesses again."
